--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rig_reconfigure
-	previous = 
-	base = 5b9c05ae8251
+	previous = 5b9c05ae8251
+	base = 1bbd9def7b46
 	trim = 
 	trimbase = 
